tools/tests/errors/surf_lex_08.ki
# LEXER: a hex literal prefix with no hex digits following it
var x = 0x